[package]
name = "rust-easy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "algorithm",
    "async-io",
    "my-redis",
    "simple-web-server",
    "crypto",
    "tests",
    "privacy",
    "hello_macro",
    "hello_macro_derive"
]

[dependencies]
anyhow = "1.0"
hello_macro_derive = {path = "./hello_macro_derive"}
hello_macro = {path = "./hello_macro"}